feat: add option to filter categories
- add helper method to get currently logged account
- update specs
- refactor code that uses rodauth.rails_account to use the helper
  method
